# SKATE-LANG

./: .gitmodules  README.md  SKATE-LANG-SPEC
Compiler/: .gitignore  CMakeLists.txt  test.ska
Compiler/src/: compiler.hpp  parse.cpp
